--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body {
     background: #121212;
     color: #ffffff;
+    text-shadow: 0 0 1px rgba(255,255,255,0.3);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
