Fix viewport and make the centering more fancy

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,16 @@ body {
 
 .content {
     position: absolute;
-    top: 50%;
+    height: auto;
+    width: auto;    
     left: 50%;
+    top: 50%;
     text-align: center;
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
+    transform: translate(-50%, -50%);    
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+    transform-style: preserve-3d;
 }
 
 ul {
