--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,18 @@ body {
     transform-style: preserve-3d;
 }
 
+.avatar {
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-image: url('img/avatar.jpg');
+}
+
 ul {
     padding: 0;
 }
