--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,18 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+ul {
+    padding: 0;
+}
+
+a {
+    color: #2f76e8;
+}
+
+p {
+    text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+}
+
 .content {
     position: absolute;
     height: auto;
@@ -29,10 +41,6 @@ body {
     background-position: center center;
     background-size: cover;
     background-image: url('img/avatar.jpg');
-}
-
-ul {
-    padding: 0;
 }
 
 .link {
